# flight-report-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
skills/flight-report/: SKILL.md
src/app/: config.py  main.py  schemas.py  templates.py
src/app/graph/: pipeline.py  state.py
src/app/graph/nodes/: enrich.py  intake.py  report.py  search_flights.py  store_interaction.py  suggest.py  validate.py
src/app/mcp/: server.py  tools.py
src/app/prompts/: templates.py
src/app/services/: amadeus_client.py  embeddings.py  llm_provider.py  pdf_generator.py  qdrant_client.py  rag.py  weather_client.py
src/app/services/scraper/: chunker.py  destinations.py  ingest.py  wikivoyage.py
tests/: conftest.py  test_schemas.py
tests/app/: test_main.py
tests/graph/: test_pipeline.py
tests/graph/nodes/: test_enrich.py  test_enrich_with_rag.py  test_intake.py  test_interaction_storage.py  test_report.py  test_search_flights.py  test_suggest.py  test_suggest_with_rag.py  test_validate.py
tests/integration/: test_full_pipeline_rag.py
tests/mcp/: test_mcp_server.py
tests/services/: test_amadeus_client.py  test_chunker.py  test_embeddings.py  test_llm_provider.py  test_pdf_generator.py  test_qdrant_client.py  test_rag.py  test_weather_client.py  test_wikivoyage.py
