[project]
name = "trabajo-final-agente-llm"
version = "0.1.0"
description = "LangGraph Travel Recommendation Agent - Generates comparative PDF reports with flight alternatives"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "reportlab>=4.2.0",
    "amadeus>=9.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "grandalf>=0.8",
    "sse-starlette>=2.1.0",
    "qdrant-client>=1.12.0",
    "tiktoken>=0.8.0",
    "mcp[cli]>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ingest-wikivoyage = "src.app.services.scraper.ingest:main"
flight-report-mcp = "src.app.mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
